- API: New DefaultFrontendPerspectiveCache, a default implementation of the interface FrontendPerspectiveCache
- Bugfix: Glass Extension now also works if Common is not in the classpath
- Bugfix: The default behavior of CControl was to set always "secure environment = false". The parameter is now set to the correct value depending on the environment in which an application runs.
- Bugfix: Common, tabs are no longer reordered when maximizing or unmaximizing a stack of Dockables
- Bugfix: FlapDockStation on JDesktopPane, invalid window remembers state and informs FlapDockStation that it cannot be used any longer. This prevents a bug where Dockables were selected but did not show up.
- Bugfix: A NPE was thrown when applying Nimbus and other LookAndFeels
! API: Several methods removed from DockUI including the LocaleListener (this functionality was replaced by the TextManager)
! API: Removed the class Resources in Common (this functionality was replaced by the TextManager)

[v.1.10p6b]
- Bugfix: using a DockSituationIgnore often caused a NPE

[v1.1.0p6c]
- Bugfix: PlaceholderMap.PlaceholderKey#shrink did not produce a valid key and let to NPEs.
- API: Printing a warning if modifying the contents of a DockStation while being in a listener.

[v.1.1.0p6d]
- API: while changing the hierarchy of Dockables and DockStations there is now a lock which prevents concurrent modifications. The lock is called "DockHierarchyLock" and can be acquired by calling DockController.getHierarchyLock. Clients can temporarily disable the lock.
- Bugfix: it is now much harder to remove a CDockable from its working-area by putting it into a stack and moving it around together with this stack
- Bugfix: PlaceholderList did throw NPE when reading an entry with no placeholders and no dockable
- Bugfix: SingleParentRemover now also performs a check when elements have been added, this way invalid new DockStations can be found as well.