@@ -29,7 +29,6 @@ import bibliothek.gui.dock.common.CLocation;
 import bibliothek.gui.dock.common.CWorkingArea;
 import bibliothek.gui.dock.common.mode.ExtendedMode;
 import bibliothek.gui.dock.layout.DockableProperty;
-import bibliothek.gui.dock.station.split.SplitDockProperty;
 
 /**
  * A location representing a {@link CWorkingArea}.
@@ -69,9 +68,7 @@ public class CWorkingAreaLocation extends CSplitLocation{
 
     @Override
     public DockableProperty findProperty( DockableProperty successor ) {
-        SplitDockProperty property = new SplitDockProperty( 0, 0, 1, 1 );
-        property.setSuccessor( successor );
-        return property;
+        return successor;
     }
 
     @Override
