@@ -607,7 +607,7 @@ public abstract class SplitNode{
     /**
      * Creates or replaces children according to the values found in 
      * <code>key</code>. Note that this method does not remove any {@link Dockable}s
-     * from the station. They must be removed explicitly using {@link Leaf#setDockable(Dockable, boolean)}
+     * from the station. They must be removed explicitly using {@link Leaf#setDockable(Dockable, bibliothek.gui.dock.DockHierarchyLock.Token)}
      * @param key the key to read
      * @param linksToSet a map that is to be filled with all new {@link Leaf}s and their {@link Dockable}s which are not yet set.
      * @param checkValidity whether to ensure that all new {@link Dockable}s are
